2007-08-07  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* 2007-08-07  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/Test/TestDocumentUtils.cs,
	  Monodoc.Editor.Gui/Test/TestUtils.cs,
	  Monodoc.Editor.Gui/Test/TestTextRange.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Changed name from
	  TestUtils to TestDocumentUtils.cs, added TestTextRange.cs too.
	* Monodoc.Editor.Gui/DocumentUndoManager.cs: Skeleton of abstract class
	  SplitterAction that implements the interface EditAction that
	  represents a given "action" done in the text buffer. The interface
	  request the implementation of basic functions like Undo, Redo and
	  Destroy for any Action.
	* Monodoc.Editor.Gui/Utils.cs: Added TextRange helper class, this class
	  takes the start TextIter and end TextIter over a region on a buffer
	  and grants helpful method to get the Text inside the region, change
	  the region bounds, delete the text in the region, etc.
	* DocumentBufferArchiver.cs: FormaEnd is called before the start offset
	  of an element is saved.
	* DocumentBufferArchiver.cs: Removed commented lines.
	
	  Moved AddNewLine method to DocumentUtils class, change old calls to
	  new arrange.
	* DocumentTagTable.cs: Minor changes.
	* Test/TestDocumentTagTable.cs: Several test units
	  for DocumentTagTable class.
	* Test/TestDocumentTag.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added skeleton for
	  inserting test units for DocumentTag class.
	* DocumentBufferArchiver.cs: Removed AddString and
	  AddPadding from class and moved them to DocumentUtils, the old
	  calls are changed to the new arrange.
	
	  Removed FormatEmpty method now FormatEnd handles all the formating
	  at the end of all the elements.
	
	  Some code cleanup when handling empty elements while deserializing.
	
	  Now in serialization we check that if a text is marked with
	  "significant-whitespace" is unescaped ie that the escaped newlines
	  in the text are recovered.